opam-version: "1.2"
maintainer: "YOUR EMAIL ADDRESS"
authors: ["YOUR NAME"]
homepage: "https://github.com/USERNAME/sample-application"
bug-reports: "https://github.com/USERNAME/sample-application/issues"
dev-repo: "https://github.com/USERNAME/sample-application.git"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

build-test: ["dune" "runtest" "-p" name]

depends: [
  "dune" {build}
  "alcotest" {test}
]
