opam-version: "1.2"
maintainer: "YOUR EMAIL ADDRESS"
authors: ["YOUR NAME"]
homepage: "https://github.com/USERNAME/sample-library"
bug-reports: "https://github.com/USERNAME/sample-library/issues"
dev-repo: "https://github.com/USERNAME/sample-library.git"

build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]

build-test: [
  ["jbuilder" "runtest" "-p" name]
]

depends: [
  "jbuilder" {build}
]
