opam-version: "1.2"
maintainer: "YOUR EMAIL ADDRESS"
authors: ["YOUR NAME"]
homepage: "https://github.com/USERNAME/sample-application"
bug-reports: "https://github.com/USERNAME/sample-application/issues"
dev-repo: "https://github.com/USERNAME/sample-application.git"

build: [
  ["jbuilder" "subst"] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]

depends: [
  "jbuilder" {build & >= "1.0+beta14"}
]
